# support_table_django_vue

./: .gitignore  README.md
be/: init_data.py  pyproject.toml  requirements.txt
be/static/css/: app.73aa02a0.css  app.c63524c4.css
be/static/js/: app.1c32867b.js.map  app.b376dc9f.js  app.b376dc9f.js.map  app.b99766d3.js  app.b99766d3.js.map  chunk-vendors.a055b6ad.js  chunk-vendors.a055b6ad.js.map
be/support/: asgi.py  settings.py  urls.py  wsgi.py
be/support_request/: apps.py  models.py  serializers.py  urls.py  views.py
be/support_request/management/commands/: init_test_data.py
be/support_request/migrations/: 0001_squashed_0003_alter_supportrequest_state.py
be/templates/: index.html
fe/: package-lock.json  package.json  vue.config.js
fe/src/: App.vue  main.js
fe/src/api/: index.js
fe/src/assets/: style.css
fe/src/components/: ContactMe.vue
fe/src/components/Table/: FieldSelector.vue  SearchInput.vue  StatusFilter.vue  TableVue.vue
fe/src/utils/: datetime.js
